--- a/index.html
+++ b/index.html
@@ -18,82 +18,163 @@
             <h2>– Añadir Recetas –</h2>
             <form id="form-add-recipe">
 
-            <!--Name -->
-            <div class="form-group">
-                <label for="recipe-name">Nombre de la Receta:</label><br>
-                <input type="text" id="recipe-name" name="recipe-name" class="input-recipe" placeholder="Introduce el nombre" required>
-            </div>
+                <!--Name -->
+                <div class="form-group">
+                    <label for="recipe-name">Nombre de la Receta:</label><br>
+                    <input type="text" id="recipe-name" name="recipe-name" class="input-recipe"
+                        placeholder="Introduce el nombre" required>
+                </div>
 
-            <!--Time -->
-            <div class="form-group">
-                <label for="prep-time">Tiempo de Preparación :</label><br>
-                <select id="prep-time" name="prep-time" required>
-                    <option value="">Selecciona el Tiempo</option>
-                    <option value="15">15 min</option>
-                    <option value="30">30 min</option>
-                    <option value="45">45 min</option>
-                    <option value="60">60 min</option>
-                    <option value="90">90 min</option>
-                    <option value="120">120 min</option>
+                <!--Time -->
+                <div class="form-group">
+                    <label for="prep-time">Tiempo de Preparación :</label><br>
+                    <select id="prep-time" name="prep-time" required>
+                        <option value="">Selecciona el Tiempo</option>
+                        <option value="15">15 min</option>
+                        <option value="30">30 min</option>
+                        <option value="45">45 min</option>
+                        <option value="60">60 min</option>
+                        <option value="90">90 min</option>
+                        <option value="120">120 min</option>
+                    </select>
+                </div>
+
+                <!--Difficulty level -->
+                <fieldset class="form-group">
+                    <legend>Nivel de Dificultad:</legend>
+                    <input type="radio" id="easy" name="difficulty" value="easy" required>
+                    <label for="easy">Fácil</label>
+
+                    <input type="radio" id="medium" name="difficulty" value="medium">
+                    <label for="medium">Medio</label>
+
+                    <input type="radio" id="hard" name="difficulty" value="hard">
+                    <label for="hard">Difícil</label>
+                </fieldset>
+                <!-- Category -->
+                <label for="recipe-category">Categoría</label><br>
+                <select id="recipe-category">
+                    <option value="all">Todas las categorías</option>
+                    <option value="starter">Entrante</option>
+                    <option value="mainCourse">Plato principal</option>
+                    <option value="dessert">Postre</option>
                 </select>
-            </div>
+                <!--Ingredients -->
+                <div class="form-group">
+                    <label for="ingredient-input">Ingredientes:</label><br>
+                    <input type="number" id="quantity-input" name="quantity-input" class="input-quantity"
+                        placeholder="Cantidad" min="0" step="1">
+                    <select id="measure-select" name="measure-select">
+                        <option value="">Medida</option>
+                        <option value="g">g</option>
+                        <option value="kg">kg</option>
+                        <option value="ml">ml</option>
+                        <option value="L">L</option>
+                        <option value="cucharadita">cdita</option>
+                        <option value="cucharada">cda</option>
+                        <option value="taza">tza</option>
+                        <option value="onza">oz</option>
+                        <option value="unidad">ud</option>
+                        <option value="pizca">pizca</option>
+                        <option value="hoja">hoja</option>
+                        <option value="rama">rama</option>
+                        <option value="trozo">trozo</option>
+                    </select>
+                    <input type="text" id="ingredient-input" name="ingredient-input" class="input-recipe"
+                        placeholder="Añade ingrediente">
+                    <button id="btnAddIngredient" type="button">Añadir</button>
+                    <ul id="ingredient-list"></ul>
+                </div>
 
-            <!--Difficulty level -->
-            <fieldset class="form-group">
-                <legend>Nivel de Dificultad:</legend>
-                <input type="radio" id="easy" name="difficulty" value="Fácil" required>
-                <label for="easy">Fácil</label>
-                
-                <input type="radio" id="medium" name="difficulty" value="Medio">
-                <label for="medium">Medio</label>
-
-                <input type="radio" id="hard" name="difficulty" value="Difícil">
-                <label for="hard">Difícil</label>
-            </fieldset>
-
-            <!--Ingredients -->
-            <div class="form-group">
-                <label for="ingredient-input">Ingredientes:</label><br>
-                <input type="number" id="quantity-input" name="quantity-input" class="input-quantity" placeholder="Cantidad" min="0" step="1">
-                <select id="measure-select" name="measure-select">
-                    <option value="">Medida</option>
-                    <option value="g">g</option>
-                    <option value="kg">kg</option>
-                    <option value="ml">ml</option>
-                    <option value="L">L/option>
-                    <option value="cucharadita">cdita</option>
-                    <option value="cucharada">cda</option>
-                    <option value="taza">tza</option>
-                    <option value="onza">oz</option>
-                    <option value="unidad">ud</option>
-                    <option value="pizca">pizca</option>
-                    <option value="hoja">hoja</option>
-                    <option value="rama">rama</option>
-                    <option value="trozo">trozo</option>
-                </select>
-                <input type="text" id="ingredient-input" name="ingredient-input" class="input-recipe" placeholder="Añade ingrediente">
-                <button id="btnAddIngredient" type="button">Añadir</button>
-                <ul id="ingredient-list"></ul>
-            </div>
-            
-            <!--Instructions -->
-            <div class="form-group">
-                <label for="instructions-input">Pasos:</label><br>
-                <input type="text" id="instructions-input" name="instructions-input" class="input-instruction" placeholder="Añade paso">
-                <button id="btnAddInstruction" type="button">Añadir</button>
-                <ul id="instructions-list"></ul>
-            </div>
-            <button type="submit" id="btn-add">Añadir receta</button>
-            <button type="reset">Cancelar</button>
-        </form>
+                <!--Instructions -->
+                <div class="form-group">
+                    <label for="instructions-input">Pasos:</label><br>
+                    <input type="text" id="instructions-input" name="instructions-input" class="input-instruction"
+                        placeholder="Añade paso">
+                    <button id="btnAddInstruction" type="button">Añadir</button>
+                    <ul id="instructions-list"></ul>
+                </div>
+                <button type="submit" id="btn-add">Añadir receta</button>
+                <button type="reset">Cancelar</button>
+            </form>
         </section>
+
+        <!-- Search Recipes -->
+
         <section id="section-search">
             <h2>– Buscar Recetas –</h2>
-            <article id="recipes-search"></article>
+
+            <form id="search-form">
+                <div class="search-field">
+                    <label for="search-input"> Buscar por nombre: </label><br>
+                    <input type="text" id="search-input" placeholder="Buscar recetas ...">
+                    <button type="button" id="btn-search-name">Buscar</button>
+                </div>
+                <button type="button" id ="toggle-filters">Mostrar</button>
+                <div id="filter">
+                    <label>Filtrar por:</label>
+                    <!-- Category filter -->
+                    <fieldset class="filter-category">
+                        <legend>Categorías:</legend>
+                        <input type="checkbox" id="entrantes" name="category" value="entrantes">
+                        <label for="entrantes">Entrantes</label><br>
+
+                        <input type="checkbox" id="principal" name="category" value="principal">
+                        <label for="principal">Plato principal</label><br>
+
+                        <input type="checkbox" id="postre" name="category" value="postre">
+                        <label for="postre">Postre</label>
+                    </fieldset>
+
+                    <!-- Difficulty filter -->
+                    <fieldset class="filter-difficulty">
+                        <legend>Dificultad:</legend>
+                        <input type="checkbox" id="easy-search" name="difficulty" value="easy">
+                        <label for="easy-search">Fácil</label><br>
+
+                        <input type="checkbox" id="medium-search" name="difficulty" value="medium">
+                        <label for="medium-search">Medio</label><br>
+
+                        <input type="checkbox" id="hard-search" name="difficulty" value="hard">
+                        <label for="hard-search">Difícil</label>
+                    </fieldset>
+
+                    <!-- Time filter -->
+                    <fieldset class="filter-time">
+                        <legend>Tiempo de preparación:</legend>
+                        <input type="checkbox" id="time-15" name="time" value="15">
+                        <label for="time-15">15 min</label><br>
+
+                        <input type="checkbox" id="time-30" name="time" value="30">
+                        <label for="time-30">30 min</label><br>
+
+                        <input type="checkbox" id="time-45" name="time" value="45">
+                        <label for="time-45">45 min</label><br>
+
+                        <input type="checkbox" id="time-60" name="time" value="60">
+                        <label for="time-60">60 min</label><br>
+
+                        <input type="checkbox" id="time-90" name="time" value="90">
+                        <label for="time-90">90 min</label><br>
+
+                        <input type="checkbox" id="time-120" name="time" value="120">
+                        <label for="time-120">120 min</label>
+                    </fieldset>
+                    <!-- Button -->
+                    <div class="search-button">
+                        <button type="submit">Aplicar filtros</button>
+                    </div>
+                </div>
+
+
+
+            </form>
         </section>
+
+        <!--Recipe list-->
         <section id="section-list">
             <h2>– Recetas –</h2>
-            <article id="recipes-list"></article>
+            <div id="recipes-list"></div>
         </section>
 
     </main>
