refactor: extract reusable button toggle function

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                     <input type="text" id="search-input" placeholder="Buscar recetas ...">
                     <button type="button" id="btn-search-name">Buscar</button>
                 </div>
-                <button type="button" id ="toggle-filters">Mostrar</button>
-                <div id="filter">
+                <button type="button" class ="toggle-btn" data-target="filter" >Mostrar</button>
+                <div id="filter" class="toggle-content">
                     <label>Filtrar por:</label>
                     <!-- Category filter -->
                     <fieldset class="filter-category">
