feat: implement search functionality

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <input type="text" id="search-input" placeholder="Buscar recetas ...">
                     <button type="button" id="btn-search-name">Buscar</button>
                 </div>
-                <button type="button" class ="toggle-btn" data-target="filter" >Mostrar</button>
+                <button type="button" class ="toggle-btn" data-target="filter" >Mostrar filtros</button>
                 <div id="filter" class="toggle-content">
                     <label>Filtrar por:</label>
                     <!-- Category filter -->
