feat: add 'load more' functionality to show additional recipes

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
         <section id="section-list">
             <h2>– Recetas –</h2>
             <div id="recipes-list"></div>
+            <button id="load-more">Mostrar más</button>
         </section>
 
     </main>
