feat: add manual recipe to menu

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <ul id="modal-recipes-list" style="list-style:none; padding:0; margin:0;"></ul>
             <button id="cancel-modal">Cancelar</button>
             <button id="clear-cell"> Limpiar celda</button>
+            <button id="add-cell">Añadir menú</button>
             <br><br>
         </div>
         <!--!Form to add recipes -->
