feat: implement touch event support

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="section-container" id="app-container">
         <section id="manage-menu">
             <h1 class="h1">– Menú Semanal –</h1>
+            <div class="table-wrapper">
             <table id="weekly-menu">
                 <thead>
                     <tr>
@@ -88,6 +89,7 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
             <p class="table-instructions">
   💡 <strong>Consejo:</strong> haz <em>clic</em> en una celda para añadir o editar una receta,  
   y <em>doble clic</em> para eliminar su contenido.
