feat: separate automatic and manual shopping lists

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
                     <button id="generateListBtn" class="btn btn-main">Generar lista</button>
 
                     <h1>– Lista de la compra –</h1>
+                    <h3>Ingredientes del menú</h3>
                     <ul id="shoppingList"></ul>
+                    
+                    <h3>Ingredientes manuales</h3>
+                    <ul id="manualList"></ul>
 
                     <h3>Añadir ingrediente manual</h3>
                     
